--- a/Haskell/Advent.cabal
+++ b/Haskell/Advent.cabal
@@ -25,6 +25,6 @@ executable Advent
                        Advent.Day21, Advent.Day22, Advent.Day23, Advent.Day24, Advent.Day25
 
   other-extensions:    TemplateHaskell
-  build-depends:       base >=4.8 && <4.9, deepseq >=1.4 && <1.5, split >=0.2 && <0.3, template-haskell >=2.10 && <2.11, ansi-terminal >=0.6 && <0.7, unordered-containers >=0.2 && <0.3, parsec >=3.1 && <3.2, array >=0.5 && <0.6, MissingH, lens, memoize, aeson, bytestring, vector, text, lens-aeson, pcre-heavy, multiset, process, cryptohash, arithmoi, containers
+  build-depends:       base >=4.8 && <4.9, deepseq >=1.4 && <1.5, split >=0.2 && <0.3, template-haskell >=2.10 && <2.11, ansi-terminal >=0.6 && <0.7, unordered-containers >=0.2 && <0.3, parsec >=3.1 && <3.2, array >=0.5 && <0.6, MissingH, lens, memoize, aeson, bytestring, vector, text, lens-aeson, pcre-light, pcre-heavy, multiset, process, cryptohash, arithmoi, containers, utility-ht
   ghc-options:         -O2
   default-language:    Haskell2010
