--- a/Haskell/Advent.cabal
+++ b/Haskell/Advent.cabal
@@ -26,6 +26,6 @@ executable Advent
                        Advent.Day22h
 
   other-extensions:    TemplateHaskell
-  build-depends:       base >=4.8 && <4.9, deepseq >=1.4 && <1.5, split >=0.2 && <0.3, template-haskell >=2.10 && <2.11, ansi-terminal >=0.6 && <0.7, unordered-containers >=0.2 && <0.3, array >=0.5 && <0.6, MissingH, lens, memoize, aeson, bytestring, vector, text, lens-aeson, pcre-light, pcre-heavy, multiset, cryptohash, arithmoi, containers
+  build-depends:       base >=4.8 && <4.9, deepseq >=1.4 && <1.5, split >=0.2 && <0.3, template-haskell >=2.10 && <2.11, ansi-terminal >=0.6 && <0.7, unordered-containers >=0.2 && <0.3, array >=0.5 && <0.6, MissingH, lens, memoize, aeson, bytestring, vector, text, lens-aeson, pcre-light, pcre-heavy, multiset, cryptohash, arithmoi, containers, attoparsec
   ghc-options:         -O2
   default-language:    Haskell2010
