--- a/Haskell/Advent.cabal
+++ b/Haskell/Advent.cabal
@@ -17,13 +17,18 @@ cabal-version:       >=1.10
 
 executable Advent
   main-is:             Main.hs
-  other-modules:       Utils, Year2015.Days
+  other-modules:       Utils, DaysTH,
                        Year2015.Day01, Year2015.Day02, Year2015.Day03, Year2015.Day04, Year2015.Day05,
                        Year2015.Day06, Year2015.Day07, Year2015.Day08, Year2015.Day09, Year2015.Day10,
                        Year2015.Day11, Year2015.Day12, Year2015.Day13, Year2015.Day14, Year2015.Day15,
                        Year2015.Day16, Year2015.Day17, Year2015.Day18, Year2015.Day19, Year2015.Day20,
                        Year2015.Day21, Year2015.Day22, Year2015.Day23, Year2015.Day24, Year2015.Day25,
-                       Year2015.Day22h
+                       Year2015.Day22h,
+                       Year2016.Day01, Year2016.Day02, Year2016.Day03, Year2016.Day04, Year2016.Day05,
+                       Year2016.Day06, Year2016.Day07, Year2016.Day08, Year2016.Day09, Year2016.Day10,
+                       Year2016.Day11, Year2016.Day12, Year2016.Day13, Year2016.Day14, Year2016.Day15,
+                       Year2016.Day16, Year2016.Day17, Year2016.Day18, Year2016.Day19, Year2016.Day20,
+                       Year2016.Day21, Year2016.Day22, Year2016.Day23, Year2016.Day24, Year2016.Day25
 
   other-extensions:    TemplateHaskell
   build-depends:       base >=4.9 && <4.10, deepseq, split, template-haskell, ansi-terminal, unordered-containers, array, MissingH, lens, memoize, aeson, bytestring, vector, text, lens-aeson, multiset, cryptohash, arithmoi, containers, attoparsec, megaparsec
