--- a/Advent.cabal
+++ b/Advent.cabal
@@ -28,7 +28,8 @@ executable Advent
                        Year2016.Day06, Year2016.Day07, Year2016.Day08, Year2016.Day09, Year2016.Day10,
                        Year2016.Day11, Year2016.Day12, Year2016.Day13, Year2016.Day14, Year2016.Day15,
                        Year2016.Day16, Year2016.Day17, Year2016.Day18, Year2016.Day19, Year2016.Day20,
-                       Year2016.Day21, Year2016.Day22, Year2016.Day23, Year2016.Day24, Year2016.Day25
+                       Year2016.Day21, Year2016.Day22, Year2016.Day23, Year2016.Day24, Year2016.Day25,
+                       Year2016.Day12h
 
   other-extensions:    TemplateHaskell
   build-depends:       base >=4.9 && <4.10, deepseq, split, template-haskell, ansi-terminal, unordered-containers, array, MissingH, lens, memoize, aeson, bytestring, vector, text, lens-aeson, multiset, cryptohash, arithmoi, containers, attoparsec, megaparsec, pcre-heavy, base16-bytestring, mtl
