--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-7.8
+resolver: nightly-2016-12-19
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -43,7 +43,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - memoize-0.8.1
-- cryptohash-md5-0.11.100.1
+- containers-0.5.8.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
