--- a/stack.yaml
+++ b/stack.yaml
@@ -44,6 +44,7 @@ packages:
 extra-deps:
 - memoize-0.8.1
 - containers-0.5.8.1
+- astar-0.3.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
