--- a/package.yaml
+++ b/package.yaml
@@ -6,7 +6,7 @@ license: UnspecifiedLicense
 other-extensions:
 - TemplateHaskell
 dependencies:
-- base >=4.9 && <4.10
+- base >=4.9 && <5
 - deepseq
 - split
 - template-haskell
@@ -26,6 +26,7 @@ dependencies:
 - containers >=0.5.8.1
 - attoparsec
 - megaparsec
+- pcre-light
 - pcre-heavy
 - base16-bytestring
 - mtl
