--- a/Advent.cabal
+++ b/Advent.cabal
@@ -101,8 +101,12 @@ executable Advent
     either,
     monad-loops,
     free,
-    recursion-schemes
-  ghc-options: -O2
+    recursion-schemes,
+    stm,
+    async,
+    extra,
+    clock
+  ghc-options: -O2 -threaded
   hs-source-dirs:
     src
   default-language: Haskell2010
