Generalize multiprocess solution to Day 4 to be re-used in other situations where threading could speed up result

--- a/Advent.cabal
+++ b/Advent.cabal
@@ -105,7 +105,9 @@ executable Advent
     stm,
     async,
     extra,
-    clock
+    clock,
+    stm-chans,
+    monad-loops
   ghc-options: -O2 -threaded
   hs-source-dirs:
     src
