Make problem finding glob instead of hard coding years and improve speed of 2015 Day 10

--- a/Advent.cabal
+++ b/Advent.cabal
@@ -120,7 +120,8 @@ executable Advent
     monad-loops,
     conduit,
     stm-conduit,
-    conduit-combinators
+    conduit-combinators,
+    interpolate
   ghc-options: -O2 -threaded
   hs-source-dirs:
     src
