--- a/Advent.cabal
+++ b/Advent.cabal
@@ -77,6 +77,7 @@ executable Advent
     Year2016.Day23
     Year2016.Day24
     Year2016.Day25
+    Year2017.Day01
   other-extensions: TemplateHaskell
   build-depends:
     base >=4.9 && <5,
