--- a/Advent.cabal
+++ b/Advent.cabal
@@ -79,6 +79,7 @@ executable Advent
     Year2016.Day25
     Year2017.Day01
     Year2017.Day02
+    Year2017.Day03
   other-extensions: TemplateHaskell
   build-depends:
     base >=4.9 && <5,
