--- a/Advent.cabal
+++ b/Advent.cabal
@@ -80,6 +80,7 @@ executable Advent
     Year2017.Day01
     Year2017.Day02
     Year2017.Day03
+    Year2017.Day04
   other-extensions: TemplateHaskell
   build-depends:
     base >=4.9 && <5,
