--- a/Advent.cabal
+++ b/Advent.cabal
@@ -1,6 +1,8 @@
--- This file has been generated from package.yaml by hpack version 0.18.1.
+-- This file has been generated from package.yaml by hpack version 0.20.0.
 --
 -- see: https://github.com/sol/hpack
+--
+-- hash: 7eebb0c1119b5feee518cf73ebd2e3997d614c75a56bbf23b02d3a5a2e4554a0
 
 name:                Advent
 version:             0.1.0.0
@@ -12,12 +14,12 @@ cabal-version:       >= 1.10
 
 custom-setup
   setup-depends:
-    base >=4.9 && <5,
-    interpolate,
-    text,
     Cabal,
     MissingH,
-    pcre-heavy
+    base >=4.9 && <5,
+    interpolate,
+    pcre-heavy,
+    text
 
 executable Advent
   main-is: Main.hs
@@ -83,51 +85,51 @@ executable Advent
     Year2017.Day04
     Year2017.Day05
     Year2017.Day06
+    Paths_Advent
   other-extensions: TemplateHaskell
   build-depends:
-    base >=4.9 && <5,
-    deepseq,
-    split,
-    template-haskell,
-    ansi-terminal,
-    unordered-containers,
-    array,
     MissingH,
-    lens,
     aeson,
-    bytestring,
-    vector,
-    text,
-    lens-aeson,
-    multiset,
-    cryptohash-md5,
+    ansi-terminal,
     arithmoi,
-    containers >=0.5.8.1,
-    attoparsec,
-    megaparsec,
-    pcre-light,
-    pcre-heavy,
-    base16-bytestring,
-    mtl,
-    hashable,
-    string-conv,
-    data-ordlist,
+    array,
     astar,
-    errors,
-    either,
-    monad-loops,
-    free,
-    recursion-schemes,
-    stm,
     async,
-    extra,
+    attoparsec,
+    base >=4.9 && <5,
+    base16-bytestring,
+    bytestring,
     clock,
-    stm-chans,
-    monad-loops,
     conduit,
-    stm-conduit,
     conduit-combinators,
-    interpolate
+    containers >=0.5.8.1,
+    cryptohash-md5,
+    data-ordlist,
+    deepseq,
+    either,
+    errors,
+    extra,
+    free,
+    hashable,
+    interpolate,
+    lens,
+    lens-aeson,
+    megaparsec,
+    monad-loops,
+    mtl,
+    multiset,
+    pcre-heavy,
+    pcre-light,
+    recursion-schemes,
+    split,
+    stm,
+    stm-chans,
+    stm-conduit,
+    string-conv,
+    template-haskell,
+    text,
+    unordered-containers,
+    vector
   ghc-options: -O2 -threaded
   hs-source-dirs:
     src
