--- a/Advent.cabal
+++ b/Advent.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 05bcfafb22ce034d6af362e8653f8af2d56a6eeb37c0a1f0945b8ab34b7acd02
+-- hash: c3e14c0ec45b01239ec59c98f2853bc7f7b8e84fa3f602cf49168365959babb1
 
 name:                Advent
 version:             0.1.0.0
@@ -94,6 +94,7 @@ executable Advent
     Year2017.Day13
     Year2017.Day14
     Year2017.Day15
+    Year2017.Day16
     Paths_Advent
   other-extensions: TemplateHaskell
   build-depends:
