--- a/package.yaml
+++ b/package.yaml
@@ -54,7 +54,7 @@ executables:
   Advent:
     main: Main.hs
     source-dirs: src
-    ghc-options: -O2 -threaded
+    ghc-options: -O2 -threaded -Wall
 build-type: Custom
 custom-setup:
   dependencies:
