--- a/Advent.cabal
+++ b/Advent.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7b8ab925f5705cd2ab6e5962ff73742da5957367595054a8fcbbfc1dc85dbddc
+-- hash: 4604aca60c16721ef0522beda590b856d2d18f360eb14c886a260a139765b222
 
 name:                Advent
 version:             0.1.0.0
@@ -52,7 +52,6 @@ executable Advent
     Year2015.Day23
     Year2015.Day24
     Year2015.Day25
-    Year2015.Problem
     Year2016.Assembunny
     Year2016.Day01
     Year2016.Day02
@@ -96,6 +95,9 @@ executable Advent
     Year2017.Day15
     Year2017.Day16
     Year2017.Day17
+    Year2017.Day18
+    Year2017.Day19
+    Year2017.Day20
     Paths_Advent
   other-extensions: TemplateHaskell
   build-depends:
