--- a/package.yaml
+++ b/package.yaml
@@ -50,6 +50,7 @@ dependencies:
   - conduit-combinators
   - interpolate
   - transformers
+  - hashtables
 executables:
   Advent:
     main: Main.hs
