Remove unnecessary IO from 2017 Day 18

--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ dependencies:
   - base16-bytestring
   - bytestring
   - clock
+  - conduit
   - containers >=0.5.8.1
   - cryptohash-md5
   - data-ordlist
