--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - astar-0.3.0.0
+- memoize-0.8.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
