--- a/package.yaml
+++ b/package.yaml
@@ -9,6 +9,7 @@ default-extensions:
   - DeriveTraversable
   - LambdaCase
   - MultiWayIf
+  - TemplateHaskell
   - TupleSections
 other-extensions:
   - TemplateHaskell
