Add ViewPatterns to common exts and cleanup 2019 Day 17

--- a/package.yaml
+++ b/package.yaml
@@ -11,6 +11,7 @@ default-extensions:
   - MultiWayIf
   - TemplateHaskell
   - TupleSections
+  - ViewPatterns
 other-extensions:
   - TemplateHaskell
 ghc-options:
