Update stack resolver to 14.8

--- a/package.yaml
+++ b/package.yaml
@@ -53,8 +53,10 @@ library:
     - deepseq
     - either
     - extra
+    - finite-typelits
     - foldl
     - free
+    - groups
     - hashable
     - linear
     - megaparsec
