--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.1
+resolver: lts-14.8
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -44,6 +44,7 @@ packages:
 extra-deps:
 - astar-0.3.0.0
 - memoize-0.8.1
+- ref-fd-0.4.0.2
 
 # Override default flag values for local packages and extra-deps
 flags: {}
