--- a/stack.yaml
+++ b/stack.yaml
@@ -45,6 +45,7 @@ extra-deps:
 - astar-0.3.0.0
 - memoize-0.8.1
 - ref-fd-0.4.0.2
+- hip-1.5.4.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
