--- a/package.yaml
+++ b/package.yaml
@@ -67,6 +67,7 @@ library:
     - mtl
     - parallel
     - pipes
+    - pipes-bytestring
     - pointedlist
     - psqueues
     - recursion-schemes
