--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-14.21
+resolver: lts-15.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -47,6 +47,7 @@ extra-deps:
 - memoize-0.8.1
 - mod-0.1.1.0
 - ref-fd-0.4.0.2
+- repa-3.4.1.4
 - semirings-0.5.2
 
 # Override default flag values for local packages and extra-deps
