--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-16.22
+resolver: lts-16.27
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -42,13 +42,10 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
+- arithmoi-0.11.0.1
 - astar-0.3.0.0
 - hip-1.5.4.0
-- memoize-0.8.1
-- mod-0.1.1.0
-- ref-fd-0.4.0.2
 - repa-3.4.1.4
-- semirings-0.5.2
 
 # Override default flag values for local packages and extra-deps
 flags: {}
