--- a/stack.yaml
+++ b/stack.yaml
@@ -45,6 +45,7 @@ extra-deps:
 - arithmoi-0.11.0.1
 - astar-0.3.0.0
 - hip-1.5.4.0
+- memoize-0.8.1
 - repa-3.4.1.4
 
 # Override default flag values for local packages and extra-deps
