Use toml for expected answers

--- a/package.yaml
+++ b/package.yaml
@@ -107,6 +107,8 @@ tests:
       - -threaded
     dependencies:
       - Advent
+      - htoml
+      - unordered-containers
 build-type: Custom
 custom-setup:
   dependencies:
